# RustEuler

./: .gitignore  Cargo.toml  LICENSE  README.md
.run/: All Tests.run.xml
src/: lib.rs  main.rs
src/maths/: arithmetic.rs  arithmetique.rs  chiffres.rs  digits.rs  factorial.rs  fibonacci.rs  graph.rs  integer_root.rs  matrix.rs  mod.rs  polygonal.rs  polynomial.rs  power.rs  premiers.rs  primes.rs  puissance.rs  pythagorean.rs  timer.rs
src/problems/: euler.rs  mod.rs  problem001.rs  problem002.rs  problem003.rs  problem004.rs  problem005.rs  problem006.rs  problem007.rs  problem008.rs  problem009.rs  problem010.rs  problem011.rs  problem012.rs  problem013.rs  problem014.rs  problem015.rs  problem016.rs  problem017.rs  problem018.rs  problem019.rs  problem020.rs  problem021.rs  problem022.rs  problem023.rs  problem024.rs  problem025.rs  problem026.rs  problem027.rs  problem028.rs  problem029.rs  problem030.rs  problem031.rs  problem032.rs  problem033.rs  problem034.rs  problem035.rs  problem036.rs  problem037.rs  problem038.rs  (+86 more)
src/problems/problems_0xx/: mod.rs  problem001.rs  problem002.rs  problem003.rs  problem004.rs  problem005.rs  problem006.rs  problem007.rs  problem008.rs  problem009.rs  problem010.rs  problem011.rs  problem012.rs  problem013.rs  problem014.rs  problem015.rs  problem016.rs  problem017.rs  problem018.rs  problem019.rs  problem020.rs  problem021.rs  problem022.rs  problem023.rs  problem024.rs  problem025.rs  problem026.rs  (+75 more)
src/utils/: epsilon.rs  hash.rs  mod.rs  mpq_fraction.rs  mpz_nombre.rs  mpz_number.rs  permutations.rs  timer.rs
(+173 files in other folders)
