[package]
name = "RustEuler"
version = "0.1.0"    # thecurrent version, obeying semver
edition = '2024'
include = ["src"]

[dependencies]
num-traits = "0.2.19"
bit-set = "0.8.0"
gmp-mpfr-sys = "1.6"
chrono = "0.4.42"
permutohedron = "0.2.4"
fraction = "0.15.3"
string-builder = "0.2.0"
num-integer = "0.1.46"
itertools = "0.14.0"
