[package]
name = "rust_euler"
version = "0.1.0"    # thecurrent version, obeying semver
edition = '2024'
include = ["src"]

[dependencies]
num-traits = "0.2.19"
bit-set = "0.8.0"
gmp-mpfr-sys = "1.6"
chrono = "0.4.42"
permutohedron = "0.2.4"
fraction = "0.15.3"
string-builder = "0.2.0"
num-integer = "0.1.46"
itertools = "0.14.0"
rayon = "1.11.0"
inventory = "0.3.21"
colored = "3.0.0"
priority-queue = "2.7.0"
rand = "0.10.0-rc.5"
rustsat = "0.7.4"
rustsat-minisat = "0.7.4"